# 3d_model_gaussian_splat_wasm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
crates/gsplat-app/: Cargo.toml
crates/gsplat-app/src/: app.rs  camera_control.rs  graphics.rs  lib.rs  loader.rs  scene.rs  web_entry.rs
crates/gsplat-core/: Cargo.toml
crates/gsplat-core/src/: lib.rs  pose.rs
docs/: CONCEPTS.md  DESIGN.md  HANDOFF.md
