[workspace]
resolver = "3"
members = ["crates/gsplat-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["David Yurek <david.a.yurek@gmail.com>"]
rust-version = "1.93"

# Filled in as crates are added (wgpu, wgpu-3dgs-viewer, brush, image, rust-cv …).
[workspace.dependencies]
gsplat-core = { path = "crates/gsplat-core" }
