[workspace]
resolver = "3"
members = ["crates/gsplat-core", "crates/gsplat-app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["David Yurek <david.a.yurek@gmail.com>"]
rust-version = "1.93"

# Filled in as crates are added (brush, image, rust-cv …).
[workspace.dependencies]
gsplat-core = { path = "crates/gsplat-core" }

# Rendering / GPU. Versions are pinned to what wgpu-3dgs-viewer 0.7 expects —
# the wgpu ecosystem is tightly version-coupled, so these move together.
wgpu-3dgs-viewer = "0.7"
wgpu = "29"
winit = "0.30"
glam = "0.32"
bytemuck = { version = "1.25", features = ["derive"] }
log = "0.4"
pollster = "0.4"
thiserror = "2"

# Web (wasm32) only.
# Pinned exactly: the wasm-bindgen schema must match the CLI version installed by
# trunk/CI (Trunk.toml + deploy.yml). `=` stops `cargo update` from silently
# bumping the crate past the pinned CLI and breaking the build — bump all three together.
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
web-time = "1"
web-sys = "0.3"
